--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,7 @@ nav ul li a {
 }
 
 .hero {
-    background: url('hole.jpg'),  no-repeat center center/cover ; /* Cambiado a 'no-repeat' */
+    background: url('holemmm.png'),  no-repeat center center/cover ; /* Cambiado a 'no-repeat' */
     color: #921212;
     text-align: center;
     padding: 100px 20px;
